--- a/TDIC/SourceCode/TDIC_GenerateGlobalDriver_-fGtCM_SGAprior/Makefile
+++ b/TDIC/SourceCode/TDIC_GenerateGlobalDriver_-fGtCM_SGAprior/Makefile
@@ -4,11 +4,11 @@ DEPS = GTMatrix.h PanCanGTMatrix.h PanCanTDIC.h TDIC.h TDIMatrix.h
 %.o: %.cpp $(DEPS)
 	g++  -O3 -fopenmp -c $< -o $@
 
-PanCanTDICexeOOMP: $(OBJS)
+TDIC_GD_exeOMP: $(OBJS)
 	g++  -O3 -fopenmp $(OBJS) -o $@
 
 clean:
-	rm -f *.o PanCanTDICexeOOMP
+	rm -f *.o TDIC_GD_exeOMP
 
 
 	
