--- a/TDIC/SourceCode/TDIC_GenerateGlobalDriver_-fGtCM_SGAprior/Makefile
+++ b/TDIC/SourceCode/TDIC_GenerateGlobalDriver_-fGtCM_SGAprior/Makefile
@@ -1,5 +1,5 @@
-OBJS = GTMatrix.o PanCanGTMatrix.o PanCanTDIC.o TDIC.o TDIMatrix.o TDIC_Main.o 
-DEPS = GTMatrix.h PanCanGTMatrix.h PanCanTDIC.h TDIC.h TDIMatrix.h
+OBJS = GeneGlobDriver.o GenePanCanGlobDriver.o GTMatrix.o PanCanGTMatrix.o TDIMatrix.o TDIC_Main.o 
+DEPS = GeneGlobDriver.h GenePanCanGlobDriver.h GTMatrix.h PanCanGTMatrix.h TDIMatrix.h
 
 %.o: %.cpp $(DEPS)
 	g++  -O3 -fopenmp -c $< -o $@
